# OSSW-LTS-v13

./: .gitattributes  README.md
Core/UnModified_OpenSource/apparmor/apparmor-2.13.2/libraries/libapparmor/: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
Core/UnModified_OpenSource/apparmor/apparmor-2.13.2/libraries/libapparmor/doc/: Makefile.am  aa_change_hat.pod  aa_change_profile.pod  aa_features.pod  aa_find_mountpoint.pod  aa_getcon.pod  aa_kernel_interface.pod  aa_policy_cache.pod  aa_query_label.pod  aa_splitcon.pod  aa_stack_profile.pod
Core/UnModified_OpenSource/apparmor/apparmor-2.13.2/libraries/libapparmor/include/: Makefile.am  aalogparse.h
Core/UnModified_OpenSource/apparmor/apparmor-2.13.2/libraries/libapparmor/m4/: ac_pod2man.m4  ac_podchecker.m4  ac_python_devel.m4
Core/UnModified_OpenSource/apparmor/apparmor-2.13.2/libraries/libapparmor/src/: Makefile.am  (+15 more)
Core/UnModified_OpenSource/autogen/autogen-5.18.12/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  THANKS  TODO  VERSION  aclocal.m4  config-h.in  configure  configure.ac
Core/UnModified_OpenSource/autogen/autogen-5.18.12/agen5/: Makefile.am  Makefile.in  ag-text.c  ag-text.def  ag-text.h  agCgi.c  agDep.c  agInit.c  agShell.c  agUtils.c  autogen.1  autogen.c  autogen.h  bootstrap.dir  cgi-fsm.c  cgi-fsm.h  cgi.def  defDirect.c  defFind.c  defLex.c  defLoad.c  defParse-fsm.c  defParse-fsm.h  defParse.def  defParse.x  directive.c  directive.h  expExtract.c  expFormat.c  expGperf.c  expGuile.c  expMake.c  expOutput.c  expPrint.c  expState.c  expString.c  expr.h  expr.ini  fmemopen.c  funcCase.c  (+25 more)
Core/UnModified_OpenSource/autogen/autogen-5.18.12/agen5/test/: Makefile.am  Makefile.in  alist.test  case.test  columns.test  daemon.test  debug.test  define.test  defref.test  directives.test  dynref.test  endmac.test  error.test  expr.test  extract.test  for.test  forfrom.test  forin.test  format.test  get.test  gperf.test  heredef.test  html.test  in.test  include.test  leave.test  license.test  line.test  loop.test  make.test  match.test  opts.test  output.test  pseudo.test  reorder.test  return.test  shell.test  snarf.test  stack.test  str2m.test  (+6 more)
Core/UnModified_OpenSource/autogen/autogen-5.18.12/autoopts/: Makefile.am  Makefile.in  ao-strs.def  ao_string_tokenize.3  autogen.map  autoopts-config.1  autoopts-config.in  bootstrap.dir  configFileLoad.3  funcs.def  genshell.def  install-hook.sh  mk-autoopts-pc.in  mk-tpl-config.sh  optionFileLoad.3  optionFindNextValue.3  optionFindValue.3  optionFree.3  optionGetValue.3  optionLoadLine.3  optionMemberList.3  optionNextValue.3  optionOnlyUsage.3  optionPrintVersion.3  optionPrintVersionAndReturn.3  optionProcess.3  optionRestore.3  optionSaveFile.3  optionSaveState.3  optionUnloadNested.3  optionVersion.3  strequate.3  streqvcmp.3  streqvmap.3  strneqvcmp.3  strtransform.3
Core/UnModified_OpenSource/autogen/autogen-5.18.12/autoopts/po/: usage-txt.pot
Core/UnModified_OpenSource/autogen/autogen-5.18.12/autoopts/test/: Makefile.am  Makefile.in  alias.test  argument.test  cfg-edit.test  cond.test  config.test  defs.in  doc.test  enums.test  equiv.test  errors.test  getopt.test  handler.test  immediate.test  keyword.test  library.test  main.test  nested.test  nls.test  rc.test  shell.test  stdopts.def  stdopts.test  time.test  usage.test  vendor.test  vers.test
Core/UnModified_OpenSource/autogen/autogen-5.18.12/autoopts/tpl/: agtexi-cmd.tpl  cmd-doc.tlib  def2pot.tpl  getopt.tpl  man2mdoc.pl  man2texi.sh  mdoc2man.pl  options.tpl  str2init.tlib  texi2man.sh  texi2mdoc.sh  tpl-config-tlib.in  usage.tlib
Core/UnModified_OpenSource/autogen/autogen-5.18.12/columns/: Makefile.am  Makefile.in  columns.c  opts.c  opts.def  opts.h
Core/UnModified_OpenSource/autogen/autogen-5.18.12/compat/: Makefile.am  Makefile.in  bootstrap.dir  strftime.c  strsignal.c  strsignal.def  strsignal.h  strsignal.tpl  unlocked-io.h
Core/UnModified_OpenSource/autogen/autogen-5.18.12/config/: ag_macros.m4  bootstrap  bootstrap.local  bootstrap.shlib  gnulib-cache.m4  gnulib-comp.m4  install-defs.sh  libopts.def  libopts.m4  misc.def  mk-shdefs.in  unlocked-io.m4
Core/UnModified_OpenSource/autogen/autogen-5.18.12/debian/: autogen-doc.doc-base  autogen-doc.docs  autogen.install  autogen.lintian-overrides  autoopts-config.1  changelog  control  libopts25-dev.install  libopts25.install  rules  watch
Core/UnModified_OpenSource/autogen/autogen-5.18.12/debian/patches/: 05_cross_pkg_config.diff  10_libopts_tarball_perms.diff  series
Core/UnModified_OpenSource/autogen/autogen-5.18.12/debian/upstream/: metadata  signing-key.asc
Core/UnModified_OpenSource/autogen/autogen-5.18.12/doc/: Makefile.am  Makefile.in  agdoc.texi  auto-opts.tlib  auto_gen-tpl.in  autogen-intro.texi  autogen-texi.txt  autogen.info  autogen.info-1  autogen.info-2  autogen.info-3  invoke-bitmaps.texi  invoke-columns.texi  invoke-getdefs.texi  invoke-xml2ag.texi  libopts.texi  mk-agen-texi.sh
Core/UnModified_OpenSource/autogen/autogen-5.18.12/getdefs/: Makefile.am  Makefile.in  gdemit.c  gdinit.c  getdefs.c  getdefs.h  opts.def  proto.h
Core/UnModified_OpenSource/autogen/autogen-5.18.12/getdefs/test/: Makefile.am  Makefile.in  cfg.test  defs  index.test  option.test  subblock.test
Core/UnModified_OpenSource/autogen/autogen-5.18.12/pkg/: Makefile.am  Makefile.in  gnudir.tpl  gnudoc.tpl  lsm.tpl  mkpkg.linux  mkpkg.sh  mkpkg.sun  pkg-env.in  spec.tpl
Core/UnModified_OpenSource/autogen/autogen-5.18.12/pkg/libopts/: libopts-add.m4  mklibsrc.sh  stdnoreturn.mk
Core/UnModified_OpenSource/autogen/autogen-5.18.12/snprintfv/: Makefile.am  Makefile.in  compat.h  custom.c  filament.c  filament.h  filament.in  format.c  mem.c  mem.h  printf.c  printf.h  printf.in  stream.c  stream.h  stream.in
Core/UnModified_OpenSource/autogen/autogen-5.18.12/xml2ag/: Makefile.am  Makefile.in  fork.c  fork.tpl  xml2ag.c  xmlopts.def
Core/UnModified_OpenSource/autogen/autogen-5.18.12/xml2ag/test/: Makefile.am  Makefile.in  convert.test
Core/UnModified_OpenSource/popt/popt-1.16/auto/: Makefile.am
(+6574 files in other folders)
